// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`single slider > handles correctly onChange with min and max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        >
          <div
            class="styles__a5ifr110 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div>
              <div
                class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6b styles_size_small__1ce7gb6d styles_controls_false__1ce7gb6g"
                    data-testid="slider-input"
                    id="_r_37_"
                    max="10"
                    min="2"
                    placeholder=""
                    step="1"
                    type="number"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_36_"
            max="10"
            min="2"
            name="slider"
            step="1"
            style="--a5ifr12: calc(12.5% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 12.5% 100%;"
            tabindex="0"
            type="range"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > handles correctly with custom scale 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        >
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            6
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_3a_"
            max="3"
            min="0"
            name="slider"
            step="1"
            style="--a5ifr12: calc(66.66666666666667% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 66.66666666666667% 100%;"
            tabindex="0"
            type="range"
            value="2"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: 0%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                3
              </p>
            </span>
            <span
              class="styles__a5ifr18"
              data-element-left="false"
              data-element-right="false"
              data-value="1"
              style="--a5ifr13: 33.333333333333336%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                5
              </p>
            </span>
            <span
              class="styles__a5ifr18"
              data-element-left="false"
              data-element-right="false"
              data-value="2"
              style="--a5ifr13: 66.66666666666667%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_captionStrong__m4c9oww style_disabled_false__m4c9ow1b style_undefined_compound_0__m4c9ow1c style_undefined_compound_72__m4c9ow3c"
              >
                6
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="3"
              style="--a5ifr13: 100%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                10
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_0_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_0_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        helper
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_2a_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <div
            aria-controls="_r_2d_"
            aria-describedby="_r_2d_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
              data-direction="column"
              data-error="false"
              id="_r_2a_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly default tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_2e_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <div
            aria-controls="_r_2h_"
            aria-describedby="_r_2h_"
            class="styles__w40vpo9"
            tabindex="0"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
              data-direction="column"
              data-error="false"
              id="_r_2e_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_s_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_row__a5ifr1u styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="row"
            data-error="false"
            id="_r_s_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <span
          class="styles__a5ifr1h styles_isDouble_true__a5ifr1j style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          data-testid="slider-value"
          style="--qabug40: center;"
        >
          1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row with input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_10_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_row__a5ifr1u styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="row"
            data-error="false"
            id="_r_10_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <div
          class="styles__a5ifr110 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
              data-controls="false"
              data-disabled="false"
              data-error="false"
              data-size="small"
              data-success="false"
              data-unit="false"
            >
              <div
                class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
                style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
              >
                <input
                  aria-label="input"
                  class="styles__1ce7gb6b styles_size_small__1ce7gb6d styles_controls_false__1ce7gb6g"
                  data-testid="slider-input"
                  id="_r_13_"
                  max="100"
                  min="0"
                  placeholder=""
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_1d_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-disabled="true"
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles_disabled_true__a5ifr1r styles__a5ifr1b styles_disabled_true__a5ifr1c styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            disabled=""
            id="_r_1d_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_1h_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles_error_true__a5ifr1s styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="true"
            id="_r_1h_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_11__m4c9ow1n style_undefined_compound_75__m4c9ow3f"
      >
        helper
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_1m_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles_error_true__a5ifr1s styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="true"
            id="_r_1m_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_11__m4c9ow1n style_undefined_compound_75__m4c9ow3f"
      >
        helper
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_1r_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles_error_true__a5ifr1s styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="true"
            id="_r_1r_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_11__m4c9ow1n style_undefined_compound_75__m4c9ow3f"
      >
        error
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_20_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles_error_true__a5ifr1s styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="true"
            id="_r_20_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_11__m4c9ow1n style_undefined_compound_75__m4c9ow3f"
      >
        error
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_25_"
          >
            Label
          </label>
          <div
            class="styles__a5ifr110 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div>
              <div
                class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6b styles_size_small__1ce7gb6d styles_controls_false__1ce7gb6g"
                    data-testid="slider-input"
                    id="_r_27_"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_25_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_2u_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_2u_"
            max="10"
            min="1"
            name="Name"
            step="1"
            style="--a5ifr12: calc(0% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly prefix 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_o_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            %1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_o_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <label
              class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              for="_r_5_"
            >
              Label
            </label>
            <span
              class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
            >
              *
            </span>
          </div>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_5_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_32_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_32_"
            max="100"
            min="0"
            name="Name"
            step="0.5"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix complex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_e_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1
            <button
              type="button"
            >
              suffix
            </button>
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_e_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_a_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            1%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_a_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_i_"
          >
            Label
          </label>
          <div
            class="styles__a5ifr110 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div>
              <div
                class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="true"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6b styles_hasUnit_true__1ce7gb6c styles_size_small__1ce7gb6d styles_controls_false__1ce7gb6g"
                    data-testid="slider-input"
                    id="_r_k_"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                  <span
                    class="styles__1ce7gb65 styles_size_small__1ce7gb66 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                  >
                    %
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_i_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with custom ticks 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_2i_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_2i_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: 0%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                1 Mb
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--a5ifr13: 100%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_captionStrong__m4c9oww style_disabled_false__m4c9ow1b style_undefined_compound_0__m4c9ow1c style_undefined_compound_72__m4c9ow3c"
              >
                30MB
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with default ticks without label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1.5rem_xxsmall__toi52uj styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_2o_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_2o_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: 0%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
              >
                0
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--a5ifr13: 100%;"
            >
              <p
                class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_captionStrong__m4c9oww style_disabled_false__m4c9ow1b style_undefined_compound_0__m4c9ow1c style_undefined_compound_72__m4c9ow3c"
              >
                1
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value < min 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_15_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_15_"
            max="100"
            min="10"
            name="Name"
            step="1"
            style="--a5ifr12: calc(0% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value > max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_left_xxsmall__toi52u6d"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_space-between_xxsmall__toi52u6p"
        >
          <label
            class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            for="_r_19_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1h styles_isDouble_false__a5ifr1k styles_isPadded_true__a5ifr1i style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            data-testid="slider-value"
            style="--qabug40: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_end_xxsmall__toi52u5v"
        />
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_center_xxsmall__toi52u5j"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1p styles_direction_column__a5ifr1t styles__a5ifr1b styles_disabled_false__a5ifr1d styles_isDouble_false__a5ifr1f"
            data-direction="column"
            data-error="false"
            id="_r_19_"
            max="10"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 8px); --a5ifr11: var(--rwwhsl1n); background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
